# Doing

./: .gitignore  README.md  kek.cpp  lol.cpp
attempts/petgraph5/: Cargo.toml  graph.bak.xgr  graph.dot  graph0.json  modified_graph.json
attempts/petgraph5/src/: apsp.rs  apsp2.rs  apsp3.rs  avr_interpreter.rs  avr_ps_main.rs  procstates.rs  ps_utils.rs  rndstates.rs  ser.rs  ser2.rs  serl.rs
attempts/procstates/: README.md  build.zig
attempts/procstates/src/: 2bitjmpproc.zig  main.zig  selfpathfindproc.zig
info/: язычёк.bak.xgr  язычёк.graphml
